# nbctx-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
codex-skills/nbctx-notebook-cli/: SKILL.md
docs/: releasing.md
examples/: appended_cell.py  basic_operations.ipynb  duplicated_variable_logic.py  inserted_cell.py  replacement_cell.py
packaging/homebrew/: nbctx.rb.template
skills/nbctx-notebook-cli/: README.md  SKILL.md
src/nbctx/: __init__.py  cli.py  errors.py  notebooks.py
tests/: conftest.py  test_cli.py  test_notebooks.py
