[project]
name = "notebook-cli"
version = "0.1.0"
description = "Agent-friendly CLI for inspecting and safely editing Jupyter notebooks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
]

[project.scripts]
nbctx = "nbctx.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nbctx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
