[project]
name = "nbctx"
version = "0.1.0"
description = "Agent-friendly CLI for inspecting and safely editing Jupyter notebooks."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Alex Muchau" },
]
keywords = ["jupyter", "notebook", "cli", "agents", "ipynb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "nbformat>=5.10.4",
]

[project.urls]
Homepage = "https://github.com/alexmuchau/nbctx-cli"
Repository = "https://github.com/alexmuchau/nbctx-cli"
Issues = "https://github.com/alexmuchau/nbctx-cli/issues"

[project.scripts]
nbctx = "nbctx.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nbctx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
